day 3 langing page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
                 <img 
                 class="navlogo"
-                src="https://cdn.pixabay.com/photo/2022/02/13/13/10/mountain-7011121_1280.png"
+                src="./img/logo.png"
                 height="50"
                 alt="Navlogo"
                 />
@@ -47,7 +47,67 @@
 
     </nav>
    </header>
+
+   <!-- hero section  1st-->
+
+   <div class="main">
+    <section class="main1 section2">
+        <div class="carousel">
+            <img 
+            src="./img/heroproduct.png"
+            id="carouelImage"
+            class="heroProduct"
+            alt="hero Product"/>
+            <div class="carousel-controls">
+                <button id="prevBtn" class="carousel-btn"><</button>
+                <button id="nextBtn" class="carousel-btn">></button>
+            </div>
+        
+        </div>
+        <div class="s2_details">
+            <h2>Boat USA R</h2>
+            <p class="s2_detailsP">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo esse facere cupiditate labore fugiat repudiandae consequuntur non, ullam expedita, architecto quidem aperiam laboriosam qui minima aut necessitatibus consequatur. Voluptas quos animi repellendus officiis. Nostrum.
+            </p>
+
+        </div>
+    </section>
+   </div>
+
+   <!-- 2nd section -->
+    <section class="main1 section3">
+        <div class="section3_d1">
+            <h3 style="color: #0056b3">categories</h3>
+            <h1 style="color: white">
+                Enhance Your <br>
+                Music Experience
+            </h1>
+            <img src="./img/Frame 601.png" width="250" alt="Frame">
+            <button>Buy now</button>
+        </div>
+        <div class="section3_d2">
+            <img src="./img/speaker.png" alt="speaker">
+        </div>
+    </section>
+
+    <!-- 3rd section -->
+<section class="main1 section1">
+    <div class="section1_prdt">
+        <img src="./img/headphone3.png" width="450px" class="heroProduct" alt="hero product">
+        <div class="price">
+            <h3>Boat 55</h3>
+            <p>$115</p>
+            <div class="btnPrice">
+                <button class="order">order</button>
+                <button class="cart">cart</button>
+            </div>
+        </div>
+    </div>
+    <p class="s1ProductDetails">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptatem magnam laudantium molestias deleniti autem quasi deserunt optio tempore cupiditate quos similique, debitis nulla architecto consectetur tempora maxime temporibus quo et aperiam ratione!</p>
+</section>
+
 </body>
 </html>
 <!-- to make in a horizantal way we use display flex -->
- <!-- vw menas view widh -->
+  
+<!-- vw menas view widh aartyouthit.com -->
