--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
                 </li>
                 <li class="btn nav_li7 sign">
-                    <a href="signup.html">Sign Up</a>
+                    <a href="/login.html">Sign Up</a>
 
                 </li>
                 <li class="btn nav_li8 login">
-                    <a href="./login.html"> Login</a>
+                    <a href="/login.html"> Login</a>
                 </li>
 
             </ul>
@@ -183,7 +183,7 @@
         </div>
 
 
-    <div class="footer3">
+    <!-- <div class="footer3">
         <h4>Social Media</h4>
         <div class="ftr1" style="padding-bottom: 15px">
             <img  class="icn icnfb" src="./img/facebook-logo.png" alt="facebook" >
@@ -201,11 +201,43 @@
             <img src="./img/logo.png" height="40" alt="footerlogo" >
         </div>
 
+    </div> -->
+
+
+
+    <div class="footer3">
+        <h4>SOCIAL MEDIA</h4>
+        <div class="ftr1" style="padding-bottom: 15px">
+          <img
+            class="icn icnFb"
+            src="./img/facebook-logo.png"
+            height="25"
+            alt="facebook"
+          />
+          <img
+            class="icn icnIg"
+            src="./img/instagram-logo.png"
+            height="25"
+            alt="instagram"
+          />
+          <img
+            class="icn icnTw"
+            src="./img/twitter-logo.png"
+            height="25"
+            alt="twitter"
+          />
+        </div>
+        <div class="ftr2">
+          <img src="./img/logo.png" height="40" alt="footerLogo" />
+        </div>
+      </div>
     </div>
 </footer>
+
+
 </body>
 
 </html>
 <!-- to make in a horizantal way we use display flex -->
 
-<!-- vw menas view widh aartyouthit.com -->
+<!-- vw menas view widh aarthamroyouthit.com -->
