--- a/login.html
+++ b/login.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
-
-
 <body>
-
     <header>
         <nav class="nav">
             <ul class="nav_ul">
@@ -46,31 +41,30 @@
         </nav>
     </header>
 
-    <!-- absout us page -->
-    <div class="about-us-page">
-        <div class="about-us-container">
-            <h2>About YOUTH IT</h2>
-            <p>Welcome to <strong> Youth IT</strong> ,your premier destination for the latest technology and gadgets.
-                FOunded by a team of passionate tech enthuisasts, our ensuring you stay ahead in the first place .</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nobis, ratione aperiam at qui eum deserunt
-                tempore rerum veniam consectetur possimus, cumque omnis nemo adipisci necessitatibus laudantium autem
-                dolorum quia consequuntur explicabo quidem earum?</p>
-            <h3>Our location</h3>
-            <div class="map-container">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57036.84324332136!2d87.12478947678373!3d26.686791795727252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ef147b05fc8af9%3A0x4a5ebc2c1272e9cd!2z4KSw4KS-4KSu4KSn4KWB4KSo4KWAIOCkreCkvuCkuOClgA!5e0!3m2!1sne!2snp!4v1727934015071!5m2!1sne!2snp"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <!-- login -->
+     <div class="background-page">
+        <div class="form-container">
+            <div class="form-box">
+                <h2>login</h2>
+                <form action="#" method="POST">
+                    <div class="form-group">
+                        <label for="login-email">Email Address</label>
+                        <input type="email" name="email" id="login-email" placeholder="Your email address" required>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="login-password">Password</label>
+                        <input type="password" name="password" id="login-password" placeholder="Your password" required>
+
+                    </div>
+                    <button type="submit">Login</button>
+                </form>
+                <p>Don't have an acccount <a href="signup.html">sign up here</a></p>
             </div>
-            <h3>Contact us</h3>
-            <p>
-                <strong>Youth IT</strong><br>
-                Address: Banasbari, Morang ,Nepal <br>
-            </p>
         </div>
-    </div>
-
+     </div>
+     
     <footer>
         <div class="footer">
             <div class="footer1">
@@ -117,5 +111,4 @@
     </div>
 </footer>
 </body>
-
 </html>
