--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
 
                 </li>
                 <li class="btn nav_li7 sign">
-                    <a href="/login.html">Sign Up</a>
+                    <a href="/signup.html">Sign Up</a>
                 </li>
                 <li class="btn nav_li8 login">
                     <a href="/login.html"> Login</a>
@@ -53,7 +54,7 @@
                       
                       <div class="form-group">
                         <label for="signup-email">Email Address</label>
-                        <input type="email" name="email" id="signup-email" placeholder="Your emaol address" required>
+                        <input type="email" name="email" id="signup-email" placeholder="Your email address" required>
                       </div>
                       <div class="form-group">
                         <label for="signup"></label>
@@ -62,5 +63,51 @@
             </div>
         </div>
      </div>
+     <!-- This is a footer section  -->
+<footer>
+    <div class="footer">
+      <div class="footer1">
+        <h4>HELP</h4>
+        <p>Support us</p>
+        <p>FAQ's</p>
+        <p>Terms and conditions</p>
+        <p>Privacy policy</p>
+      </div>
+      <div class="footer2">
+        <h4>COMPANY</h4>
+        <p><a href="/" >Home</a></p>
+        <p><a href="/contact.html" >Contact</a></p>
+        <p><a href="/Product.html" >Product</a></p>
+        <p><a href="/about.html">About</a></p>
+    </div>
+    
+      <div class="footer3">
+        <h4>SOCIAL MEDIA</h4>
+        <div class="ftr1" style="padding-bottom: 15px">
+          <img
+            class="icn icnFb"
+            src="./img/facebook-logo.png"
+            height="25"
+            alt="facebook"
+          />
+          <img
+            class="icn icnIg"
+            src="./img/instagram-logo.png"
+            height="25"
+            alt="instagram"
+          />
+          <img
+            class="icn icnTw"
+            src="./img/twitter-logo.png"
+            height="25"
+            alt="twitter"
+          />
+        </div>
+        <div class="ftr2">
+          <img src="./img/logo.png" height="40" alt="footerLogo" />
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
